WiseUpTi-SalesForce/Wise Up Sales Force/src/objects/Contract_Template__c.object
<CustomObject>
    <fields>
        <fullName>Ativo__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fornecedores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parceiros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funcionários</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Modelo de Contrato</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modelos de Contrato</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>